# SimpleMessenger

./: .env.sampe  LICENSE
authentification/: Cargo.toml
authentification/src/: authentication.rs  hasher.rs  lib.rs  main.rs  models.rs  registrator.rs
authentification/src/models/: claims.rs
backend/: .gitignore  Cargo.toml
backend/src/: claims.rs  file_saver.rs  handlers.rs  main.rs  messages_stream.rs  response.rs  streams_array.rs  tied.rs
backend/src/handlers/: authorization.rs  chat.rs  contact.rs  inputs.rs  members.rs  messages.rs  user.rs  ws.rs
backend/src/tied/: chat_mapper.rs  members_mapper.rs  message_mapper.rs
data_models/: Cargo.toml
data_models/src/: lib.rs
db_manager/: Cargo.toml
db_manager/src/: chat_mapper.rs  connector.rs  contact_mapper.rs  lib.rs  main.rs  members_mapper.rs  message_mapper.rs  user_mapper.rs
front/: index.html  package-lock.json  package.json
front/src/: App.jsx  index.css
front/src/Contacts/: Contact.jsx  Contacts.jsx  Contacts.module.css
front/src/CreateGroup/: ChangeInfoForm.jsx  Create form.jsx  CreateGroup.jsx  CreateGroup.module.css
front/src/Group/: Contacts.jsx  Group.jsx  Group.module.css  Message.jsx  MessageSender.jsx  Messages.jsx  MyMessage.jsx
front/src/GroupSettings/: AddMembers.jsx  Candidat.jsx  Candidats.jsx  ChangeGroupForm.jsx  GroupSettings.jsx  GroupSettings.module.css  Member.jsx  Members.jsx  Message.jsx  MessageSender.jsx  Messages.jsx  MyMessage.jsx
front/src/Main/: Chat.jsx  Chats.jsx  Main.jsx  Main.module.css  Message.jsx
front/src/MemberComponent/: Member.jsx  Member.module.css  MemberList.jsx
front/src/Menu/: Menu.jsx  Menu.module.css
front/src/SearchUser/: SearchUser.jsx  SearchUser.module.css  User.jsx
front/src/Setings/: ChangeInfoForm.jsx  ChangePassword.jsx  Settings.jsx  Settings.module.css
front/src/SignInUp/: LogIn.jsx  SignInUp.module.css  SignUp.jsx
front/src/UI/: AddUser.jsx  BackArrow.jsx  MenuIcon.jsx  RoughImg.jsx  SearchIcon.jsx  UI.module.css
front/src/scripts/: Authorize.js  Chats.js  Contacts.js  Members.js  Messages.js  User.js  url.js
