[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
data_models = { path = "../data_models" }
rocket = { version = "0.5.0", features = ["secrets", "json"] }
ws = { package = "rocket_ws", version = "0.1.0" }
db_manager = { path = "../db_manager" }
authentification = { path = "../authentification" }
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
once_cell = "1.19.0"
futures-channel = "0.3.30"
anyhow = "1.0.81"
uuid = { version = "1.8.0", features = ["serde", "v4"] }