[package]
name = "db_manager"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_models = { path = "../data_models" }
dotenv = "0.15.0"
tiberius = "0.12.2"
anyhow = "1.0"
tokio = "1.36.0"
url = "2.5.0"
mysql = "25.0.1"
log = "0.4.20"
once_cell = "1.19.0"
[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]
sqlx = { version = "0.5", features = ["postgres"] }
